--- a/contact.html
+++ b/contact.html
@@ -19,33 +19,29 @@
   </header>
   <main>
     <section>
+      <h2>Official Contact Information</h2>
+      <ul style="font-size:1.1em;line-height:1.8;">
+        <li>
+          <strong>Website:</strong>
+          <a href="https://www.synverta.org" target="_blank">www.synverta.org</a><br>
+          <strong>Alternate Website:</strong>
+          <a href="https://www.synverta.co" target="_blank">www.synverta.co</a>
+        </li>
+        <li>
+          <strong>Email:</strong>
+          <a href="mailto:contact@synverta.org">contact@synverta.org</a>
+        </li>
+        <li>
+          <strong>Business Hours:</strong> Monday – Friday, 09:00–18:00 (UTC+8)
+        </li>
+        <li>
+          <strong>Address:</strong> (Please fill in your company's address here)
+        </li>
+      </ul>
       <p>
-        Interested in Synverta’s services or have a question? Reach out, and our team will respond as soon as possible.
+        For business cooperation, partnership, or other inquiries, please contact us at the email above.<br>
+        We aim to respond as quickly as possible.
       </p>
-      <form class="contact-form" name="contact" method="post" data-netlify="true">
-        <label>
-          Name
-          <input type="text" name="name" required>
-        </label>
-        <label>
-          Email
-          <input type="email" name="email" required>
-        </label>
-        <label>
-          Company
-          <input type="text" name="company">
-        </label>
-        <label>
-          Message
-          <textarea name="message" required></textarea>
-        </label>
-        <button type="submit">Send</button>
-      </form>
-      <div class="contact-info">
-        <h2>Business Inquiries</h2>
-        <p>Email: <a href="mailto:info@synverta.com">info@synverta.com</a></p>
-        <p>Address: (Fill in your company address)</p>
-      </div>
     </section>
   </main>
   <footer>
