--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Contact | Synverta</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Contact Synverta for B2B chemical trade inquiries.">
+  <meta name="description" content="Contact Synverta for B2B chemical trade inquiries.我是大傻瓜，我爱emma">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
