--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="about.html">About Us</a>
     <a href="contact.html">Contact</a>
     <a href="blog.html">Blog</a>
+    <a href="products.html">products</a>
   </nav>
   <!-- Navigation Bar END -->
 
