--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     <a href="about.html">About Us</a>
     <a href="contact.html" class="active">Contact</a>
     <a href="blog.html">Blog</a>
+    <a href="products.html">products</a>
   </nav>
   <header>
     <h1>Contact Us</h1>
