--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <a href="about.html" class="active">About Us</a>
     <a href="contact.html">Contact</a>
     <a href="blog.html">Blog</a>
+    <a href="products.html">products</a>
   </nav>
   <header>
     <h1>About Synverta</h1>
