--- a/about.html
+++ b/about.html
@@ -10,9 +10,10 @@
 <body>
   <nav>
     <a class="logo" href="index.html">Synverta</a>
-    <a href="about.html" class="active">About Us</a>
-    <a href="contact.html">Contact</a>a href="blog.html">Blog</a>
-    <a href="contact.html">Contact</a>
+    <a href="about.html">About Us</a>
+    <a href="products.html">products</a>
+    <a href="contact.html" class="active">Contact</a>
+    <a href="blog.html">Blog</a>
   </nav>
   <header>
     <h1>About Synverta</h1>
