--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Navigation Bar BEGIN -->
   <nav>
     <a class="logo" href="index.html">Synverta</a>
     <a href="about.html">About Us</a>
-    <a href="products.html">products</a>
+    <a href="products.html">Products</a>
     <a href="contact.html">Contact</a>
     <a href="blog.html">Blog</a>
   </nav>
-  <!-- Navigation Bar END -->
-
   <header class="hero">
     <h1>Empowering Global Chemical Trade</h1>
     <p>
