--- a/blog.html
+++ b/blog.html
@@ -11,9 +11,9 @@
   <nav>
     <a class="logo" href="index.html">Synverta</a>
     <a href="about.html">About Us</a>
-    <a href="products.html">products</a>
-    <a href="blog.html" class="active">Blog</a>
+    <a href="products.html">Products</a>
     <a href="contact.html">Contact</a>
+    <a href="blog.html" class="active">Blog</a>
   </nav>
   <header>
     <h1>Synverta Blog</h1>
