--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <nav>
     <a class="logo" href="index.html">Synverta</a>
     <a href="about.html">About Us</a>
-    <a href="products.html">products</a>
+    <a href="products.html">Products</a>
     <a href="contact.html" class="active">Contact</a>
     <a href="blog.html">Blog</a>
   </nav>
