--- a/blog.html
+++ b/blog.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Blog | Synverta</title>
+  <title>Chemical Industry Blog | Synverta</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Read the latest news and insights from Synverta’s chemical B2B platform.">
+  <meta name="description" content="Directory of insights, news, articles and updates from Synverta’s global chemical industry team.">
+  <meta name="robots" content="index, follow">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,18 +18,22 @@
   </nav>
   <header>
     <h1>Synverta Blog</h1>
-    <p>Insights, news, and updates from the global chemical industry.</p>
+    <p>Explore our latest industry insights, news, and updates.</p>
   </header>
   <main>
     <section>
-      <article>
-        <h2>Welcome to the Synverta Blog</h2>
-        <p><em>Published: Nov 10, 2025</em></p>
-        <p>
-          Stay tuned for the latest trends in the chemical industry, new features on Synverta, and trade tips for global manufacturers and buyers.  
-        </p>
-      </article>
-      <!-- To publish a new blog, copy and edit another <article> block below. -->
+      <ul class="blog-list">
+        <!-- 一下仅为示例，发布新文章时添加新<li> -->
+        <li>
+          <a href="blog-2025-welcome.html">Welcome to the Synverta Blog</a>
+          <span class="blog-date">2025-11-10</span>
+        </li>
+        <!-- 新的博客始终加在上方或下方 -->
+      </ul>
+      <p style="margin-top:2em;font-size:1.1em;color:#667;">
+        Click a title to read the full article.<br>
+        If you want to publish a new blog, just create a new html, then add its link here.
+      </p>
     </section>
   </main>
   <footer>
