--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="Directory of insights, news, articles and updates from Synverta’s global chemical industry team.">
   <meta name="robots" content="index, follow">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style_Version4.css">
 </head>
 <body>
   <nav>
