Change stylesheet link to style_blog.css

--- a/blog-2025-welcome.html
+++ b/blog-2025-welcome.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="Welcome to the Synverta Blog. Stay tuned for the latest trends, trade tips, and digital innovations in the global chemical industry.">
   <meta name="robots" content="index, follow">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style_blog.css">
 </head>
 <body>
   <nav>
