--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,8 @@
     <a href="contact.html">Contact</a>
     <a href="blog.html" class="active">Blog</a>
   </nav>
-  <header>
+  <!-- 主要变动在 header，添加 hero 类，与首页等风格一致 -->
+  <header class="hero">
     <h1>Synverta Blog</h1>
     <p>Explore our latest industry insights, news, and updates.</p>
   </header>
