--- a/products.html
+++ b/products.html
@@ -96,35 +96,66 @@
       <input type="text" id="searchInput" placeholder="Search by product name or CAS number...">
 
       <ul id="productList">
-        <!-- 
-          *** Product List Template ***
-          For each new product, copy the <li class="product-item">...</li> block below.
-          Update the href, product name, and CAS number.
-          The script will automatically handle showing and hiding them.
-          NOTE: I've added more examples to demonstrate pagination.
-        -->
-        <li class="product-item" data-name="Example Product 1" data-cas="100-01-1"><a href="product-1.html">Example Product 1</a><span class="cas">CAS: 100-01-1</span></li>
-        <li class="product-item" data-name="Example Product 2" data-cas="100-02-2"><a href="product-2.html">Example Product 2</a><span class="cas">CAS: 100-02-2</span></li>
-        <li class="product-item" data-name="Example Product 3" data-cas="100-03-3"><a href="product-3.html">Example Product 3</a><span class="cas">CAS: 100-03-3</span></li>
-        <li class="product-item" data-name="Example Product 4" data-cas="100-04-4"><a href="product-4.html">Example Product 4</a><span class="cas">CAS: 100-04-4</span></li>
-        <li class="product-item" data-name="Example Product 5" data-cas="100-05-5"><a href="product-5.html">Example Product 5</a><span class="cas">CAS: 100-05-5</span></li>
-        <li class="product-item" data-name="Example Product 6" data-cas="100-06-6"><a href="product-6.html">Example Product 6</a><span class="cas">CAS: 100-06-6</span></li>
-        <li class="product-item" data-name="Example Product 7" data-cas="100-07-7"><a href="product-7.html">Example Product 7</a><span class="cas">CAS: 100-07-7</span></li>
-        <li class="product-item" data-name="Example Product 8" data-cas="100-08-8"><a href="product-8.html">Example Product 8</a><span class="cas">CAS: 100-08-8</span></li>
-        <li class="product-item" data-name="Example Product 9" data-cas="100-09-9"><a href="product-9.html">Example Product 9</a><span class="cas">CAS: 100-09-9</span></li>
-        <li class="product-item" data-name="Example Product 10" data-cas="100-10-0"><a href="product-10.html">Example Product 10</a><span class="cas">CAS: 100-10-0</span></li>
-        <li class="product-item" data-name="Example Product 11" data-cas="100-11-1"><a href="product-11.html">Example Product 11</a><span class="cas">CAS: 100-11-1</span></li>
-        <li class="product-item" data-name="Example Product 12" data-cas="100-12-2"><a href="product-12.html">Example Product 12</a><span class="cas">CAS: 100-12-2</span></li>
-        <li class="product-item" data-name="Example Product 13" data-cas="100-13-3"><a href="product-13.html">Example Product 13</a><span class="cas">CAS: 100-13-3</span></li>
-        <li class="product-item" data-name="Example Product 14" data-cas="100-14-4"><a href="product-14.html">Example Product 14</a><span class="cas">CAS: 100-14-4</span></li>
-        <li class="product-item" data-name="Example Product 15" data-cas="100-15-5"><a href="product-15.html">Example Product 15</a><span class="cas">CAS: 100-15-5</span></li>
-        <li class="product-item" data-name="Example Product 16" data-cas="100-16-6"><a href="product-16.html">Example Product 16</a><span class="cas">CAS: 100-16-6</span></li>
-        <li class="product-item" data-name="Example Product 17" data-cas="100-17-7"><a href="product-17.html">Example Product 17</a><span class="cas">CAS: 100-17-7</span></li>
-        <li class="product-item" data-name="Example Product 18" data-cas="100-18-8"><a href="product-18.html">Example Product 18</a><span class="cas">CAS: 100-18-8</span></li>
-        <li class="product-item" data-name="Example Product 19" data-cas="100-19-9"><a href="product-19.html">Example Product 19</a><span class="cas">CAS: 100-19-9</span></li>
-        <li class="product-item" data-name="Example Product 20" data-cas="100-20-0"><a href="product-20.html">Example Product 20</a><span class="cas">CAS: 100-20-0</span></li>
-        <li class="product-item" data-name="Example Product 21" data-cas="100-21-1"><a href="product-21.html">Example Product 21</a><span class="cas">CAS: 100-21-1</span></li>
-        <li class="product-item" data-name="Example Product 22" data-cas="100-22-2"><a href="product-22.html">Example Product 22</a><span class="cas">CAS: 100-22-2</span></li>
+        <li class="product-item" data-name="Isophoronediamine" data-cas="2855-13-2">
+          <a href="product-isophoronediamine.html">Isophoronediamine</a>
+          <span class="cas">CAS: 2855-13-2</span>
+        </li>
+        <li class="product-item" data-name="Isophorone diisocyanate" data-cas="4098-71-9">
+          <a href="product-isophorone-diisocyanate.html">Isophorone diisocyanate</a>
+          <span class="cas">CAS: 4098-71-9</span>
+        </li>
+        <li class="product-item" data-name="Resorcinol (1,3-Benzenediol)" data-cas="108-46-3">
+          <a href="product-resorcinol.html">Resorcinol (1,3-Benzenediol)</a>
+          <span class="cas">CAS: 108-46-3</span>
+        </li>
+        <li class="product-item" data-name="Malic acid (DL-Malic acid)" data-cas="6915-15-7">
+          <a href="product-malic-acid.html">Malic acid (DL-Malic acid)</a>
+          <span class="cas">CAS: 6915-15-7</span>
+        </li>
+        <li class="product-item" data-name="Ascorbic acid (Vitamin C)" data-cas="50-81-7">
+          <a href="product-ascorbic-acid.html">Ascorbic acid (Vitamin C)</a>
+          <span class="cas">CAS: 50-81-7</span>
+        </li>
+        <li class="product-item" data-name="Citric acid monohydrate" data-cas="5949-29-1">
+          <a href="product-citric-acid-monohydrate.html">Citric acid monohydrate</a>
+          <span class="cas">CAS: 5949-29-1</span>
+        </li>
+        <li class="product-item" data-name="Succinic acid" data-cas="110-15-6">
+          <a href="product-succinic-acid.html">Succinic acid</a>
+          <span class="cas">CAS: 110-15-6</span>
+        </li>
+        <li class="product-item" data-name="2-Methylresorcinol" data-cas="608-25-3">
+          <a href="product-2-methylresorcinol.html">2-Methylresorcinol</a>
+          <span class="cas">CAS: 608-25-3</span>
+        </li>
+        <li class="product-item" data-name="Sodium" data-cas="7440-23-5">
+          <a href="product-sodium.html">Sodium</a>
+          <span class="cas">CAS: 7440-23-5</span>
+        </li>
+        <li class="product-item" data-name="2,6-Diaminotoluene" data-cas="823-40-5">
+          <a href="product-2-6-diaminotoluene.html">2,6-Diaminotoluene</a>
+          <span class="cas">CAS: 823-40-5</span>
+        </li>
+        <li class="product-item" data-name="Quinaldine (2-Methylquinoline)" data-cas="91-63-4">
+          <a href="product-quinaldine.html">Quinaldine (2-Methylquinoline)</a>
+          <span class="cas">CAS: 91-63-4</span>
+        </li>
+        <li class="product-item" data-name="2,5-Diaminotoluene sulfate" data-cas="615-50-9">
+          <a href="product-2-5-diaminotoluene-sulfate.html">2,5-Diaminotoluene sulfate</a>
+          <span class="cas">CAS: 615-50-9</span>
+        </li>
+        <li class="product-item" data-name="Melamine (1,3,5-Triazine-2,4,6-triamine)" data-cas="108-78-1">
+          <a href="product-melamine.html">Melamine (1,3,5-Triazine-2,4,6-triamine)</a>
+          <span class="cas">CAS: 108-78-1</span>
+        </li>
+        <li class="product-item" data-name="2-Methyl-4-nitroaniline" data-cas="99-52-5">
+          <a href="product-2-methyl-4-nitroaniline.html">2-Methyl-4-nitroaniline</a>
+          <span class="cas">CAS: 99-52-5</span>
+        </li>
+        <li class="product-item" data-name="3-Amino-2-chloro-6-methylphenol" data-cas="84540-50-1">
+          <a href="product-3-amino-2-chloro-6-methylphenol.html">3-Amino-2-chloro-6-methylphenol</a>
+          <span class="cas">CAS: 84540-50-1</span>
+        </li>
       </ul>
       <div id="pagination"></div>
     </section>
