--- a/blog.html
+++ b/blog.html
@@ -1,18 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Blog</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>About Us | Synverta</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="Learn more about Synverta - the global B2B platform for chemical trade.">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
+    <a class="logo" href="index.html">Synverta</a>
+    <a href="about.html" class="active">About Us</a>
+    <a href="products.html">Products</a>
+    <a href="contact.html">Contact</a>
+    <a href="blog.html">Blog</a>
+  </nav>
   <header>
-    <h1>Synverta Blog</h1>
-    <p>Discover the latest updates and insights from Synverta's chemical industry experts.</p>
+    <h1>Blog list</h1>
   </header>
   <main>
-    <ul id="blog-list">
+      <ul id="blog-list">
       <!-- Articles will dynamically load here -->
     </ul>
   </main>
