--- a/blog-posts/blog-ipda-report.html
+++ b/blog-posts/blog-ipda-report.html
@@ -1,14 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Investigative Report on Isophorone Diamine (IPDA)</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <title>Contact | Synverta</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="Contact Synverta for B2B chemical trade inquiries.">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Investigative Report on Isophorone Diamine (IPDA)</h1>
+  <nav>
+    <a class="logo" href="index.html">Synverta</a>
+    <a href="about.html">About Us</a>
+    <a href="products.html">Products</a>
+    <a href="contact.html" class="active">Contact</a>
+    <a href="blog.html">Blog</a>
+  </nav>
+  <header>
+         <h1>Investigative Report on Isophorone Diamine (IPDA)</h1>
         <p>Published on: 2025-11-11</p>
     </header>
     <section>
