Updated products.html with new content.

--- a/products.html
+++ b/products.html
@@ -97,63 +97,63 @@
 
       <ul id="productList">
         <li class="product-item" data-name="Isophoronediamine" data-cas="2855-13-2">
-          <a href="product-isophoronediamine.html">Isophoronediamine</a>
+          <a href="products/isophoronediamine.html">Isophoronediamine</a>
           <span class="cas">CAS: 2855-13-2</span>
         </li>
         <li class="product-item" data-name="Isophorone diisocyanate" data-cas="4098-71-9">
-          <a href="product-isophorone-diisocyanate.html">Isophorone diisocyanate</a>
+          <a href="products/isophorone-diisocyanate.html">Isophorone diisocyanate</a>
           <span class="cas">CAS: 4098-71-9</span>
         </li>
         <li class="product-item" data-name="Resorcinol (1,3-Benzenediol)" data-cas="108-46-3">
-          <a href="product-resorcinol.html">Resorcinol (1,3-Benzenediol)</a>
+          <a href="products/resorcinol.html">Resorcinol (1,3-Benzenediol)</a>
           <span class="cas">CAS: 108-46-3</span>
         </li>
         <li class="product-item" data-name="Malic acid (DL-Malic acid)" data-cas="6915-15-7">
-          <a href="product-malic-acid.html">Malic acid (DL-Malic acid)</a>
+          <a href="products/dl-malic-acid.html">Malic acid (DL-Malic acid)</a>
           <span class="cas">CAS: 6915-15-7</span>
         </li>
         <li class="product-item" data-name="Ascorbic acid (Vitamin C)" data-cas="50-81-7">
-          <a href="product-ascorbic-acid.html">Ascorbic acid (Vitamin C)</a>
+          <a href="products/ascorbic-acid.html">Ascorbic acid (Vitamin C)</a>
           <span class="cas">CAS: 50-81-7</span>
         </li>
         <li class="product-item" data-name="Citric acid monohydrate" data-cas="5949-29-1">
-          <a href="product-citric-acid-monohydrate.html">Citric acid monohydrate</a>
+          <a href="products/citric-acid-monohydrate.html">Citric acid monohydrate</a>
           <span class="cas">CAS: 5949-29-1</span>
         </li>
         <li class="product-item" data-name="Succinic acid" data-cas="110-15-6">
-          <a href="product-succinic-acid.html">Succinic acid</a>
+          <a href="products/succinic-acid.html">Succinic acid</a>
           <span class="cas">CAS: 110-15-6</span>
         </li>
         <li class="product-item" data-name="2-Methylresorcinol" data-cas="608-25-3">
-          <a href="product-2-methylresorcinol.html">2-Methylresorcinol</a>
+          <a href="products/2-methylresorcinol.html">2-Methylresorcinol</a>
           <span class="cas">CAS: 608-25-3</span>
         </li>
         <li class="product-item" data-name="Sodium" data-cas="7440-23-5">
-          <a href="product-sodium.html">Sodium</a>
+          <a href="products/sodium.html">Sodium</a>
           <span class="cas">CAS: 7440-23-5</span>
         </li>
         <li class="product-item" data-name="2,6-Diaminotoluene" data-cas="823-40-5">
-          <a href="product-2-6-diaminotoluene.html">2,6-Diaminotoluene</a>
+          <a href="products/2-6-diaminotoluene.html">2,6-Diaminotoluene</a>
           <span class="cas">CAS: 823-40-5</span>
         </li>
         <li class="product-item" data-name="Quinaldine (2-Methylquinoline)" data-cas="91-63-4">
-          <a href="product-quinaldine.html">Quinaldine (2-Methylquinoline)</a>
+          <a href="products/quinaldine.html">Quinaldine (2-Methylquinoline)</a>
           <span class="cas">CAS: 91-63-4</span>
         </li>
         <li class="product-item" data-name="2,5-Diaminotoluene sulfate" data-cas="615-50-9">
-          <a href="product-2-5-diaminotoluene-sulfate.html">2,5-Diaminotoluene sulfate</a>
+          <a href="products/2-5-diaminotoluene-sulfate.html">2,5-Diaminotoluene sulfate</a>
           <span class="cas">CAS: 615-50-9</span>
         </li>
         <li class="product-item" data-name="Melamine (1,3,5-Triazine-2,4,6-triamine)" data-cas="108-78-1">
-          <a href="product-melamine.html">Melamine (1,3,5-Triazine-2,4,6-triamine)</a>
+          <a href="products/melamine.html">Melamine (1,3,5-Triazine-2,4,6-triamine)</a>
           <span class="cas">CAS: 108-78-1</span>
         </li>
         <li class="product-item" data-name="2-Methyl-4-nitroaniline" data-cas="99-52-5">
-          <a href="product-2-methyl-4-nitroaniline.html">2-Methyl-4-nitroaniline</a>
+          <a href="products/2-methyl-4-nitroaniline.html">2-Methyl-4-nitroaniline</a>
           <span class="cas">CAS: 99-52-5</span>
         </li>
         <li class="product-item" data-name="3-Amino-2-chloro-6-methylphenol" data-cas="84540-50-1">
-          <a href="product-3-amino-2-chloro-6-methylphenol.html">3-Amino-2-chloro-6-methylphenol</a>
+          <a href="products/3-amino-2-chloro-6-methylphenol.html">3-Amino-2-chloro-6-methylphenol</a>
           <span class="cas">CAS: 84540-50-1</span>
         </li>
       </ul>
